<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/circle_bg"
        android:backgroundTint="@color/timeColor"
        android:text="@string/a3"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:id="@+id/img_text2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edris"
        android:layout_marginTop="9dp"
        android:textSize="16sp"
        android:id="@+id/txt_name_of_rec"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_text2"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_1234"
        android:layout_marginStart="16dp"
        android:id="@+id/txt_score_of_rec"
        app:layout_constraintTop_toBottomOf="@+id/txt_name_of_rec"
        app:layout_constraintStart_toEndOf="@+id/img_text2"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rankgg"
        android:textColor="@color/black"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp"
        android:id="@+id/rank2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_text2"
        />

</androidx.constraintlayout.widget.ConstraintLayout>